# solscatter

./: .gitignore  .pnp.cjs  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: soteria.yml
cli/: index.ts
cli/actions/: create.ts  index.ts  request.ts
programs/loki/: Cargo.toml
programs/loki/src/: lib.rs
programs/solscatter/: Cargo.toml
programs/solscatter/src/: duration.rs  error.rs  lib.rs  seed.rs
programs/solscatter/src/events/: mod.rs  received_vrf.rs
programs/solscatter/src/instructions/: callback_request_randomness.rs  claim_reward.rs  deposit.rs  deposit_initialize.rs  drawing.rs  initialize.rs  initialize_quarry.rs  initialize_vrf.rs  mod.rs  request_randomness.rs  solend_withdraw.rs  stake.rs  start_drawing_phase.rs  token.rs  withdraw.rs
programs/solscatter/src/state/: drawing_result.rs  fee.rs  main_state.rs  metadata.rs  mod.rs  solend_obligation.rs  solend_reserve.rs  user_deposit.rs  user_deposit_reference.rs  vrf_client.rs
tests/: loki.ts  solscatter.spec.ts  solscatter.ts
tests/constant/: index.ts
tests/utils/: account.ts  index.ts
tests/vrf/: create.ts
