[package]
name = "solscatter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solscatter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.1", features = [ "init-if-needed" ]}
anchor-spl = "0.22.1"
solana-program = "1.10.0"
switchboard-v2 = "0.1.8"
yi = { version = "0.3.0", features = [ "cpi" ]}
quarry-mine = { version = "3.0.0", features = [ "cpi" ] }
bytemuck = "1.8.0"
spl-token = "3.3.0"
spl-token-lending = { git = "https://github.com/KSuphawit/solana-program-library", features = ["no-entrypoint"] , version = "0.1.0"}
