[package]
name = "solscatter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solscatter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.23.0", features = [ "init-if-needed" ]}
anchor-spl = "0.23.0"
spl-token = "3.2.0"
solana-program = "1.8.16"
switchboard-v2 = { git = "https://github.com/qapquiz/switchboardv2-rs" }
yi = { git = "https://github.com/qapquiz/yi", features = [ "cpi" ]}
quarry-mine = { version = "4.1.0", features = [ "cpi" ] }
bytemuck = "1.8.0"
solana-maths = "0.1.2"
